trunk/Archive2/c6/64f7e34a4e1c7a/output
main.cpp: In instantiation of 'class NotWorkingSimpleVector<int>':
main.cpp:55:33:   required from here
main.cpp:37:5: error: no type named 'type' in 'struct std::enable_if<false, bool>'
     operator==(const std::string & other) const {
     ^
main.cpp: In function 'int main(int, char**)':
main.cpp:48:31: warning: unused variable 'wsv' [-Wunused-variable]
     WorkingSimpleVector<char> wsv;
                               ^
main.cpp:49:34: warning: unused variable 'nwsv' [-Wunused-variable]
     NotWorkingSimpleVector<char> nwsv;
                                  ^
main.cpp:50:30: warning: unused variable 'wsv2' [-Wunused-variable]
     WorkingSimpleVector<int> wsv2;
                              ^
main.cpp:55:33: warning: unused variable 'nwsv2' [-Wunused-variable]
     NotWorkingSimpleVector<int> nwsv2;
                                 ^
